# slop-photo-album

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js
docs/superpowers/plans/: 2026-05-14-family-album-phase-1-foundation.md  2026-05-15-family-album-phase-3a-selection.md  2026-05-16-family-album-phase-3b-layout-review.md
py-sidecar/: pyproject.toml
py-sidecar/models/: MODEL_SOURCE.md
py-sidecar/scripts/: make_fixtures.py
py-sidecar/src/server/: __init__.py  __main__.py  app.py  blur.py  embed.py  exposure.py  face_embed.py  faces.py  phash.py  tags.py
py-sidecar/tests/: test_app.py  test_blur.py  test_embed.py  test_exposure.py  test_faces.py  test_phash.py  test_tags.py
sidecar/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
sidecar/scripts/: make-fixtures.ts
sidecar/src/: exif.ts  server.ts  thumb.ts
sidecar/tests/: exif.test.ts  server.test.ts  thumb.test.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  004_selection.sql  005_selection_notes.sql  006_pages.sql  008_slot_gap.sql  009_page_padding.sql  012_page_bg_color.sql  014_album_max_pages.sql  015_slot_corner_radius.sql  018_calendar_color.sql  021_style_preset.sql  022_calendar_page_size.sql  023_calendar_slot_corner_radius.sql  024_drop_clip.sql  025_drop_face_clustering.sql
src-tauri/src/: fs_ops.rs  lib.rs  sidecar.rs
src/routes/: +layout.ts  +page.svelte
tests/e2e/: smoke.spec.ts
tools/fixtures/: README.md  package.json
(+59 files in other folders)
