[project]
name = "slop-photo-album-py-sidecar"
version = "0.1.0"
description = "Python CV sidecar for the slop-photo-album app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "opencv-python-headless>=4.9",
  "pillow>=10.0",
  "imagehash>=4.3",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
